--- a/achievements.html
+++ b/achievements.html
@@ -76,7 +76,9 @@
                         <a href="services.html" class="navs-a">Services</a>
                       </li>
                       <li class="navs-l">
-                        <a href="timeline.html" class="navs-a">Timeline</a>
+                        <a href="projectdesc.html" class="navs-a"
+                          >Project Desc</a
+                        >
                       </li>
                       <li class="navs-l">
                         <a href="achievements.html" class="navs-a"
