--- a/projectdesc.html
+++ b/projectdesc.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Naitik Mehta</title>
     <link rel="stylesheet" href="style.css" />
-    <link rel="shortcut icon" href="assets/fav.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="assets/fav.png" type="image/x-icon">
     <!-- google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -45,28 +45,26 @@
               <div
                 class="nav nav-s d-flex navbar justify-content-between navbar-expand-lg"
               >
-                <div class="asea">
-                  <div class="mk">
-                    <span class="hlit navsd">
-                      <span class="blob one q"></span>
-                      <span class="blob two w"></span>
-                    </span>
-                    <div class="cmp-nam">
-                      <a href="index.html" class="cmp Adn"> Naitik Mehta </a>
-                    </div>
+                <div class="mk">
+                  <span class="hlit navsd">
+                    <span class="blob one q"></span>
+                    <span class="blob two w"></span>
+                  </span>
+                  <div class="cmp-nam">
+                    <a href="index.html" class="cmp Adn"> Naitik Mehta </a>
                   </div>
-                  <button
-                    class="navbar-toggler"
-                    type="button"
-                    data-bs-toggle="collapse"
-                    data-bs-target="#navbarTogglerDemo01"
-                    aria-controls="navbarTogglerDemo01"
-                    aria-expanded="false"
-                    aria-label="Toggle navigation"
-                  >
-                    <span class="navbar-toggler-icon"></span>
-                  </button>
                 </div>
+                <button
+                  class="navbar-toggler"
+                  type="button"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#navbarTogglerDemo01"
+                  aria-controls="navbarTogglerDemo01"
+                  aria-expanded="false"
+                  aria-label="Toggle navigation"
+                >
+                  <span class="navbar-toggler-icon"></span>
+                </button>
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
                   <div class="navs-links">
                     <ul class="navs-uls d-flex">
@@ -83,9 +81,7 @@
                         <a href="services.html" class="navs-a">Services</a>
                       </li>
                       <li class="navs-l">
-                        <a href="projectdesc.html" class="navs-a"
-                          >Project Desc</a
-                        >
+                        <a href="projectdesc.html" class="navs-a">Project Desc</a>
                       </li>
                       <li class="navs-l">
                         <a href="achievements.html" class="navs-a"
@@ -118,77 +114,45 @@
             </div>
           </div>
         </div>
-        <div class="srv-min-bg" id="services">
+        <div class="srv-min-bg">
           <div class="srv-inr">
             <div class="srv-tlt-min">
-              <h1 class="srv-tlt-txt">Services</h1>
+              <h1 class="srv-tlt-txt">Project Description</h1>
             </div>
             <div class="crd-sc">
-              <div class="srv-crd">
+              <div class="srv-crd dd">
                 <div class="srv-crd-inr">
-                  <div class="srv-top dxs-top">
-                    <div class="srv-ico dsx">
+                  <div class="srv-top">
+                    <div class="srv-ico">
                       <img
-                        src="assets/icons/pen.png"
+                        src="assets/fav-imgs/cp.png"
                         alt="pen-img"
                         class="pen img img-gry"
                       />
                     </div>
-                    <h4 class="srv-hed">Desinging</h4>
+                    <h4 class="srv-hed" style="margin-top: 20px;">Creative Printer</h4>
                   </div>
-                  <div class="srv-bottom">
-                    <ul class="srv-ul">
-                      <li class="srv-li">Logo Desing</li>
-                      <li class="srv-li">Visiting Card Desing</li>
-                      <li class="srv-li">Banner Desing</li>
-                      <li class="srv-li">Broucher Desing</li>
-                      <li class="srv-li">Flyer Desing</li>
-                      <li class="srv-li">Booklet Desing</li>
-                    </ul>
+                  <div class="crd-p">
+
+                    <p>Creative Printer Website is your one-stop destination for all your printing needs, offering a seamless and intuitive online platform powered by JavaScript, HTML, CSS, and Bootstrap. With a sleek and user-friendly interface, users can easily upload their designs, customize print options, and place orders for a variety of printing services.</p>
                   </div>
                 </div>
               </div>
-              <div class="srv-crd">
-                <div class="srv-crd-inr code-b">
-                  <div class="srv-top dxs-top f">
-                    <div class="srv-ico dsx">
-                      <img
-                        src="assets/icons/code.png"
-                        alt="pc-img"
-                        class="code img"
-                      />
-                    </div>
-                    <h4 class="srv-hed sd">Web Development</h4>
-                  </div>
-                  <div class="srv-bottom">
-                    <ul class="srv-ul">
-                      <li class="srv-li">E-commerce Site</li>
-                      <li class="srv-li">Personal Portfolio</li>
-                      <li class="srv-li">Company Profile</li>
-                      <li class="srv-li">Travel Website</li>
-                      <li class="srv-li">Landing Page</li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
-              <div class="srv-crd">
+              <div class="srv-crd dd">
                 <div class="srv-crd-inr">
-                  <div class="srv-top dxs-top">
-                    <div class="srv-ico dsx">
+                  <div class="srv-top">
+                    <div class="srv-ico">
                       <img
-                        src="assets/icons/uiux.png"
+                        src="assets/fav-imgs/fav_btnt.png"
                         alt="pen-img"
-                        class="ui img img-gry-n"
+                        class="pen img img-gry"
                       />
                     </div>
-                    <h4 class="srv-hed">UI/UX Desing</h4>
+                    <h4 class="srv-hed" style="margin-top: 20px;">Brooklyn Travel & Tourism</h4>
                   </div>
-                  <div class="srv-bottom">
-                    <ul class="srv-ul">
-                      <li class="srv-li">Website UI | UX</li>
-                      <li class="srv-li">Software UI | UX</li>
-                      <li class="srv-li">App UI | UX</li>
-                    </ul>
+                  <div class="crd-p">
+
+                    <p>Brooklyn Travel & Tourism Website is your one-stop destination for all your printing needs, offering a seamless and intuitive online platform powered by JavaScript, HTML, CSS, and Bootstrap. With a sleek and user-friendly interface, users can easily upload their designs, customize print options, and place orders for a variety of printing services.</p>
                   </div>
                 </div>
               </div>
