--- a/projects.html
+++ b/projects.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Naitik Mehta</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="shortcut icon" href="assets/fav.png" type="image/x-icon">
     <!-- google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -80,7 +81,7 @@
                         <a href="services.html" class="navs-a">Services</a>
                       </li>
                       <li class="navs-l">
-                        <a href="timeline.html" class="navs-a">Timeline</a>
+                        <a href="projectdesc.html" class="navs-a">Project Desc</a>
                       </li>
                       <li class="navs-l">
                         <a href="achievements.html" class="navs-a"
