--- a/project.html
+++ b/project.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Naitik Mehta</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="shortcut icon" href="assets/fav.png" type="image/x-icon" />
     <!-- google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -78,7 +79,7 @@
                     <a href="services.html" class="navs-a">Services</a>
                   </li>
                   <li class="navs-l">
-                    <a href="timeline.html" class="navs-a">Timeline</a>
+                    <a href="projectdesc.html" class="navs-a">Project Desc</a>
                   </li>
                   <li class="navs-l">
                     <a href="achievements.html" class="navs-a">Achievements</a>
@@ -132,14 +133,11 @@
                 <div class="rgt-scc">
                   <div class="rgt-sc-in">
                     <div class="rgt-head">
-                      <h1 class="rgt-txt">
-                        Let’s discuss <br />
-                        about everything.
-                      </h1>
+                      <h1 class="rgt-txt">Let’s discuss about everything.</h1>
                     </div>
                     <div class="inp-hld-ss">
                       <div class="inp-inr">
-                        <div class="top-w d-flex gap-5">
+                        <div class="top-w d-flex">
                           <div class="w">
                             <div class="inp-hld">
                               <label for="yourName">
